<resources>

    <string name="app_name">Kandle</string>
    <string name="drawer_open">drawerOpen</string>
    <string name="drawer_close">drawerClose</string>
    <string name="title_activity_maps">Map</string>

    <string name="ErrorMessage">An error has occurred</string>

    <string name="google_maps_api_key">AIzaSyDFMUOQDRXbnJJbl1QEz0N1MYNcQJ5OlUA</string>

    <!-- Login -->
...
    <string name="chose_password_length">Please choose a password of more than 8 characters !</string>
    <string name="password_no_match">Your passwords do not match !</string>
    <string name="successfull_update_password">Your password has been successfully updated</string>
    <string name="password_incorrect">Unable to authenticate, please check that your password is correct</string>

    <!-- Achievement -->
    <string name="achievement_completed">Achievement Completed !</string>






...
