...
        mapbox:layout_constraintHorizontal_bias="0.9"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="0.94" />

    <ImageButton
        android:id="@+id/startOfflineGameConnectedButton"
        android:layout_width="93dp"
        android:layout_height="83dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_biohazard"
        android:visibility="gone"
        mapbox:layout_constraintBottom_toBottomOf="parent"
...
